[gd_scene load_steps=13 format=4 uid="uid://bt0mt6b7dgog3"]

[ext_resource type="Texture2D" uid="uid://df0f8dnj3f6x2" path="res://assets/spritesheets/level.png" id="1_hx04j"]
[ext_resource type="Texture2D" uid="uid://b55pn83kufomb" path="res://assets/spritesheets/flag.png" id="2_0hftq"]
[ext_resource type="PackedScene" uid="uid://bvvpx368m3e3s" path="res://scenes/Player.tscn" id="2_urutq"]
[ext_resource type="PackedScene" uid="uid://cghxxibbyrycs" path="res://scenes/UI/GameUI.tscn" id="3_0pa7d"]
[ext_resource type="Script" path="res://scripts/enemy_spawner.gd" id="4_fpvsw"]
[ext_resource type="AudioStream" uid="uid://demt204pq7t04" path="res://assets/audio/bgm.wav" id="5_aacqb"]
[ext_resource type="PackedScene" uid="uid://cbowd3oow3eby" path="res://scenes/UI/EndScreenUI.tscn" id="6_5nbw7"]
[ext_resource type="Script" path="res://scripts/power_up_spawner.gd" id="8_6mf1t"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_jdfq8"]
texture = ExtResource("1_hx04j")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
1:0/next_alternative_id = 2
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSet" id="TileSet_oueo0"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_jdfq8")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hgxh4"]
texture = ExtResource("2_0hftq")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSet" id="TileSet_wi6ue"]
tile_size = Vector2i(64, 64)
sources/0 = SubResource("TileSetAtlasSource_hgxh4")

[node name="Level" type="Node2D"]

[node name="Layers" type="Node2D" parent="."]

[node name="BaseLayer" type="TileMapLayer" parent="Layers"]
tile_map_data = PackedByteArray("AAAVAAAAAAADAAAAAAAAAAAAAAADAAAAAAAAABcAAAAFAAAAAGAVABcAAAAFAAAAADABAAAAAAADAAAAAAACAAAAAAADAAAAAAADAAAAAAADAAAAAAAEAAAAAAADAAAAAAAFAAAAAAADAAAAAAAGAAAAAAADAAAAAAAHAAAAAAADAAAAAAAIAAAAAAADAAAAAAAJAAAAAAADAAAAAAAJAAEAAAADAAAAAAAKAAEAAAADAAAAAAALAAEAAAADAAAAAAAMAAEAAAADAAAAAAANAAEAAAADAAAAAAAOAAEAAAADAAAAAAAPAAEAAAADAAAAAAAQAAEAAAADAAAAAAARAAEAAAADAAAAAAASAAEAAAADAAAAAAASAAAAAAADAAAAAAATAAAAAAADAAAAAAAUAAAAAAADAAAAAAAUAAEAAAADAAAAAAAVAAEAAAADAAAAAAATAAEAAAADAAAAAAARAAAAAAADAAAAAAAQAAAAAAADAAAAAAAPAAAAAAADAAAAAAAOAAAAAAADAAAAAAANAAAAAAADAAAAAAAMAAAAAAADAAAAAAALAAAAAAADAAAAAAAKAAAAAAADAAAAAAAIAAEAAAADAAAAAAAHAAEAAAADAAAAAAAGAAEAAAADAAAAAAAFAAEAAAADAAAAAAAEAAEAAAADAAAAAAADAAEAAAADAAAAAAACAAEAAAADAAAAAAABAAEAAAADAAAAAAAAAAEAAAADAAAAAAAAAAIAAAAFAAAAAAAVAAIAAAAFAAAAAFAAAAMAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAUAAAAEAAAAAAAAAAYAAAAEAAAAAAAAAAcAAAAEAAAAAAAAAAgAAAAEAAAAAAAAAAkAAAAEAAAAAAAAAAoAAAAEAAAAAAAAAAsAAAAEAAAAAAAAAAwAAAAEAAAAAAAAAA0AAAAEAAAAAAAAAA4AAAAEAAAAAAAAAA8AAAAEAAAAAAAAABAAAAAEAAAAAAAAABEAAAAEAAAAAAAAABIAAAAEAAAAAAAAABMAAAAEAAAAAAAAABQAAAAEAAAAAAAAABUAAAAEAAAAAAAAABYAAAAEAAAAAAABABcAAAAEAAAAAGACABcAAAAEAAAAAGADABcAAAAEAAAAAGAEABcAAAAEAAAAAGAFABcAAAAEAAAAAGAGABcAAAAEAAAAAGAHABcAAAAEAAAAAGAIABcAAAAEAAAAAGAJABcAAAAEAAAAAGAKABcAAAAEAAAAAGALABcAAAAEAAAAAGAMABcAAAAEAAAAAGANABcAAAAEAAAAAGAOABcAAAAEAAAAAGAPABcAAAAEAAAAAGAQABcAAAAEAAAAAGARABcAAAAEAAAAAGASABcAAAAEAAAAAGATABcAAAAEAAAAAGAUABcAAAAEAAAAAGAVAAMAAAAEAAAAADAVAAQAAAAEAAAAADAVAAUAAAAEAAAAADAVAAYAAAAEAAAAADAVAAcAAAAEAAAAADAVAAgAAAAEAAAAADAVAAkAAAAEAAAAADAVAAoAAAAEAAAAADAVAAsAAAAEAAAAADAVAAwAAAAEAAAAADAVAA0AAAAEAAAAADAVAA4AAAAEAAAAADAVAA8AAAAEAAAAADAVABAAAAAEAAAAADAVABEAAAAEAAAAADAVABIAAAAEAAAAADAVABMAAAAEAAAAADAVABQAAAAEAAAAADAVABUAAAAEAAAAADAVABYAAAAEAAAAADABAAIAAAAEAAAAAFACAAIAAAAEAAAAAFADAAIAAAAEAAAAAFAEAAIAAAAEAAAAAFAFAAIAAAAEAAAAAFAGAAIAAAAEAAAAAFAHAAIAAAAEAAAAAFAIAAIAAAAEAAAAAFAJAAIAAAAEAAAAAFAKAAIAAAAEAAAAAFALAAIAAAAEAAAAAFAMAAIAAAAEAAAAAFANAAIAAAAEAAAAAFAOAAIAAAAEAAAAAFAPAAIAAAAEAAAAAFAQAAIAAAAEAAAAAFARAAIAAAAEAAAAAFASAAIAAAAEAAAAAFATAAIAAAAEAAAAAFAUAAIAAAAEAAAAAFAJAAsAAAAAAAAAAAAKAAsAAAAAAAAAAAALAAsAAAAAAAAAAAAMAAsAAAAAAAAAAAAMAAwAAAAAAAAAAAANAAwAAAABAAAAAAANAA0AAAABAAAAAAANAA4AAAACAAAAAAAMAA4AAAAAAAAAAAAMAA0AAAAAAAAAAAALAA0AAAAAAAAAAAALAA4AAAAAAAAAAAAKAA4AAAAAAAAAAAAKAA0AAAAAAAAAAAAJAA0AAAAAAAAAAAAJAAwAAAAAAAAAAAAJAA4AAAAAAAAAAAAKAAwAAAAAAAAAAAALAAwAAAAAAAAAAAANAAsAAAABAAAAAAAOAA4AAAACAAAAAAAPAA4AAAACAAAAAAAPAA0AAAACAAAAAAAPAAwAAAACAAAAAAANAAQAAAABAAAAAAACAA4AAAABAAAAAAAEAAcAAAABAAAAAAAIABEAAAAAAAAAAAAFABQAAAABAAAAAAATABQAAAABAAAAAAANABYAAAAAAAAAAAATAAgAAAABAAAAAAASAA4AAAABAAAAAAAIAAUAAAAAAAAAAAABAA0AAAACAAAAAAACAA0AAAACAAAAAAADABUAAAABAAAAAAAOABMAAAACAAAAAAANABMAAAACAAAAAAAJABYAAAABAAAAAAAGABEAAAACAAAAAAAMABEAAAAAAAAAAAASABEAAAACAAAAAAAKAAgAAAABAAAAAAAEAAoAAAAAAAAAAAADAAQAAAAAAAAAAAASAAUAAAACAAAAAAAPAAYAAAACAAAAAAAFAAwAAAAAAAAAAAAEABEAAAAAAAAAAAADABIAAAAAAAAAAAADABEAAAAAAAAAAAACABIAAAAAAAAAAAACABEAAAAAAAAAAAABABIAAAAAAAAAAAABABMAAAAAAAAAAAACABMAAAAAAAAAAAABABUAAAACAAAAAAACABUAAAABAAAAAAABABQAAAACAAAAAAACABQAAAACAAAAAAADABQAAAACAAAAAAADABMAAAACAAAAAAAEABMAAAACAAAAAAAEABQAAAACAAAAAAADABYAAAABAAAAAAACABYAAAABAAAAAAABABYAAAABAAAAAAAEABYAAAACAAAAAAAFABYAAAACAAAAAAAFABUAAAACAAAAAAAEABUAAAACAAAAAAAFABMAAAABAAAAAAAGABMAAAABAAAAAAAGABQAAAABAAAAAAAHABUAAAAAAAAAAAAGABUAAAAAAAAAAAAGABYAAAAAAAAAAAAHABYAAAAAAAAAAAAIABYAAAAAAAAAAAAIABUAAAAAAAAAAAAJABUAAAAAAAAAAAAJABQAAAAAAAAAAAAIABQAAAACAAAAAAAHABQAAAACAAAAAAAHABMAAAACAAAAAAAIABMAAAACAAAAAAAJABMAAAACAAAAAAAFABIAAAABAAAAAAAEABIAAAABAAAAAAAFABEAAAABAAAAAAAGABIAAAABAAAAAAAHABEAAAAAAAAAAAAHABIAAAAAAAAAAAAIABIAAAAAAAAAAAAGABAAAAACAAAAAAAHABAAAAAAAAAAAAAIABAAAAAAAAAAAAAGAA8AAAACAAAAAAAHAA8AAAABAAAAAAADAA4AAAABAAAAAAADAA8AAAABAAAAAAAEAA4AAAABAAAAAAAFABAAAAACAAAAAAAEABAAAAACAAAAAAAEAA8AAAABAAAAAAADABAAAAABAAAAAAAFAA8AAAACAAAAAAABAA4AAAACAAAAAAABAA8AAAACAAAAAAABABAAAAACAAAAAAABABEAAAACAAAAAAACABAAAAACAAAAAAACAA8AAAACAAAAAAAOABUAAAAAAAAAAAANABUAAAAAAAAAAAAMABYAAAAAAAAAAAAMABUAAAAAAAAAAAAOABYAAAAAAAAAAAAPABYAAAAAAAAAAAAQABYAAAAAAAAAAAAQABUAAAAAAAAAAAALABYAAAABAAAAAAAKABYAAAABAAAAAAAKABUAAAABAAAAAAAKABQAAAABAAAAAAALABQAAAABAAAAAAAMABQAAAAAAAAAAAALABUAAAABAAAAAAAKABIAAAACAAAAAAAJABIAAAACAAAAAAAJABEAAAACAAAAAAAKABMAAAABAAAAAAALABMAAAABAAAAAAALABEAAAAAAAAAAAALABIAAAAAAAAAAAAMABIAAAAAAAAAAAANABIAAAAAAAAAAAANABEAAAAAAAAAAAAMABMAAAAAAAAAAAAOABQAAAACAAAAAAAPABMAAAACAAAAAAAQABMAAAABAAAAAAAQABQAAAACAAAAAAAPABUAAAACAAAAAAAPABQAAAACAAAAAAANABQAAAACAAAAAAAOABEAAAABAAAAAAAPABEAAAABAAAAAAAPABIAAAABAAAAAAAOABIAAAABAAAAAAAQABIAAAABAAAAAAARABIAAAABAAAAAAARABMAAAABAAAAAAARABQAAAABAAAAAAAQABAAAAAAAAAAAAAQABEAAAACAAAAAAARABEAAAACAAAAAAASABIAAAACAAAAAAAQAA8AAAAAAAAAAAAPABAAAAABAAAAAAAPAA8AAAABAAAAAAAOABAAAAABAAAAAAAOAA8AAAACAAAAAAANABAAAAABAAAAAAAMABAAAAAAAAAAAAAMAA8AAAAAAAAAAAANAA8AAAACAAAAAAAKABAAAAABAAAAAAAJABAAAAABAAAAAAAJAA8AAAABAAAAAAAIAA8AAAABAAAAAAAHAA4AAAABAAAAAAAGAA4AAAABAAAAAAAGAA0AAAABAAAAAAAGAAwAAAABAAAAAAAHAAwAAAACAAAAAAAHAA0AAAABAAAAAAAIAA0AAAABAAAAAAAIAA4AAAABAAAAAAAKABEAAAAAAAAAAAALABAAAAACAAAAAAALAA8AAAACAAAAAAAKAA8AAAACAAAAAAAIAAwAAAACAAAAAAAHAAsAAAACAAAAAAAIAAsAAAACAAAAAAAGAAsAAAACAAAAAAAGAAoAAAACAAAAAAAHAAoAAAACAAAAAAAFAAsAAAACAAAAAAAEAAwAAAACAAAAAAAKAAoAAAABAAAAAAAJAAoAAAABAAAAAAAIAAoAAAABAAAAAAAIAAkAAAABAAAAAAAHAAkAAAABAAAAAAAGAAkAAAACAAAAAAAEAAsAAAAAAAAAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAADAA0AAAAAAAAAAAAEAA0AAAAAAAAAAAAFAA0AAAAAAAAAAAAFAA4AAAAAAAAAAAABAAsAAAABAAAAAAACAAsAAAABAAAAAAACAAoAAAABAAAAAAABAAoAAAABAAAAAAABAAkAAAABAAAAAAABAAwAAAAAAAAAAAACAAwAAAAAAAAAAAADAAoAAAABAAAAAAADAAkAAAACAAAAAAACAAkAAAABAAAAAAACAAgAAAACAAAAAAABAAgAAAABAAAAAAABAAcAAAABAAAAAAADAAgAAAACAAAAAAADAAcAAAACAAAAAAACAAcAAAACAAAAAAACAAYAAAACAAAAAAABAAYAAAACAAAAAAADAAYAAAABAAAAAAAEAAkAAAAAAAAAAAAFAAkAAAAAAAAAAAAFAAoAAAABAAAAAAADAAUAAAABAAAAAAAEAAYAAAABAAAAAAAEAAUAAAABAAAAAAACAAUAAAABAAAAAAABAAUAAAAAAAAAAAABAAQAAAAAAAAAAAABAAMAAAAAAAAAAAACAAMAAAAAAAAAAAADAAMAAAAAAAAAAAACAAQAAAAAAAAAAAAEAAQAAAACAAAAAAAFAAMAAAACAAAAAAAEAAMAAAAAAAAAAAAFAAQAAAACAAAAAAAGAAMAAAACAAAAAAAGAAQAAAACAAAAAAAGAAUAAAACAAAAAAAFAAUAAAACAAAAAAAFAAYAAAACAAAAAAAFAAgAAAABAAAAAAAEAAgAAAABAAAAAAAFAAcAAAAAAAAAAAAGAAcAAAABAAAAAAAGAAgAAAAAAAAAAAAGAAYAAAACAAAAAAAHAAYAAAACAAAAAAAHAAQAAAAAAAAAAAAHAAUAAAAAAAAAAAAIAAQAAAAAAAAAAAAHAAMAAAABAAAAAAAIAAMAAAABAAAAAAAJAAMAAAABAAAAAAAJAAQAAAABAAAAAAAIAAYAAAABAAAAAAAHAAcAAAAAAAAAAAAIAAcAAAAAAAAAAAAHAAgAAAABAAAAAAAIAAgAAAABAAAAAAAJAAkAAAABAAAAAAAJAAgAAAACAAAAAAAJAAcAAAACAAAAAAAKAAcAAAACAAAAAAALAAcAAAACAAAAAAAJAAUAAAAAAAAAAAAKAAQAAAAAAAAAAAAJAAYAAAACAAAAAAAKAAUAAAACAAAAAAAKAAYAAAABAAAAAAALAAUAAAABAAAAAAALAAYAAAABAAAAAAAKAAMAAAAAAAAAAAALAAMAAAAAAAAAAAALAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAMAAMAAAAAAAAAAAAMAAcAAAACAAAAAAAMAAYAAAABAAAAAAAMAAUAAAABAAAAAAANAAUAAAABAAAAAAAOAAQAAAAAAAAAAAAKAAkAAAAAAAAAAAALAAkAAAAAAAAAAAALAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAANAAgAAAABAAAAAAALAAoAAAACAAAAAAAMAAoAAAACAAAAAAAMAAkAAAACAAAAAAANAAkAAAAAAAAAAAAQAAgAAAABAAAAAAAQAAkAAAABAAAAAAAPAAkAAAAAAAAAAAAPAAgAAAABAAAAAAAOAAgAAAABAAAAAAANAAoAAAABAAAAAAAOAAoAAAAAAAAAAAAOAAsAAAACAAAAAAAOAAwAAAACAAAAAAAOAA0AAAABAAAAAAAPAAsAAAAAAAAAAAAPAAoAAAAAAAAAAAAQAAoAAAAAAAAAAAAQAAsAAAABAAAAAAAOAAkAAAAAAAAAAAAQAAwAAAABAAAAAAAQAA0AAAACAAAAAAARABAAAAAAAAAAAAASABAAAAAAAAAAAAASAA8AAAAAAAAAAAARAA8AAAAAAAAAAAARAA4AAAAAAAAAAAAQAA4AAAAAAAAAAAARAAsAAAABAAAAAAARAAwAAAABAAAAAAAQAAYAAAACAAAAAAAQAAUAAAACAAAAAAAQAAQAAAACAAAAAAARAAQAAAACAAAAAAARAAUAAAACAAAAAAANAAYAAAAAAAAAAAANAAcAAAACAAAAAAAOAAYAAAAAAAAAAAAOAAUAAAAAAAAAAAANAAMAAAABAAAAAAAOAAMAAAABAAAAAAAPAAMAAAABAAAAAAAOAAcAAAAAAAAAAAAPAAcAAAABAAAAAAAQAAcAAAABAAAAAAARAAcAAAACAAAAAAARAAYAAAACAAAAAAAPAAQAAAAAAAAAAAAPAAUAAAAAAAAAAAAQAAMAAAACAAAAAAARAAMAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAATAAQAAAAAAAAAAAATAAMAAAAAAAAAAAAUAAMAAAAAAAAAAAAUAAQAAAAAAAAAAAAUAAUAAAAAAAAAAAATAAcAAAABAAAAAAASAAcAAAABAAAAAAASAAYAAAABAAAAAAATAAUAAAABAAAAAAATAAYAAAABAAAAAAAUAAYAAAABAAAAAAAUAAcAAAABAAAAAAAUAAgAAAABAAAAAAAUAAkAAAAAAAAAAAAUAAoAAAAAAAAAAAARAAgAAAACAAAAAAARAAkAAAACAAAAAAASAAkAAAACAAAAAAASAAgAAAACAAAAAAARAAoAAAAAAAAAAAASAAoAAAAAAAAAAAASAAsAAAACAAAAAAATAAsAAAACAAAAAAATAAwAAAACAAAAAAASAAwAAAACAAAAAAARAA0AAAABAAAAAAASAA0AAAABAAAAAAATAAkAAAABAAAAAAAUAAsAAAAAAAAAAAAUAAwAAAAAAAAAAAAUAA0AAAAAAAAAAAATAA0AAAABAAAAAAATAA4AAAABAAAAAAATAA8AAAABAAAAAAATABAAAAACAAAAAAATABEAAAACAAAAAAATABIAAAACAAAAAAAUAA4AAAABAAAAAAAUABEAAAAAAAAAAAAUABIAAAAAAAAAAAAUABMAAAAAAAAAAAAUABQAAAAAAAAAAAATABMAAAAAAAAAAAASABMAAAAAAAAAAAASABQAAAAAAAAAAAASABUAAAACAAAAAAARABUAAAABAAAAAAARABYAAAACAAAAAAASABYAAAACAAAAAAATABUAAAACAAAAAAATABYAAAACAAAAAAAUABUAAAACAAAAAAAUABYAAAACAAAAAAAUABAAAAACAAAAAAAUAA8AAAACAAAAAAATAAoAAAACAAAAAAA=")
tile_set = SubResource("TileSet_oueo0")

[node name="ClaimLayer" type="TileMapLayer" parent="Layers"]
tile_set = SubResource("TileSet_wi6ue")

[node name="Player" parent="." instance=ExtResource("2_urutq")]
position = Vector2(672, 800)

[node name="GameUI" parent="." instance=ExtResource("3_0pa7d")]

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource("4_fpvsw")

[node name="EnemySpawnTimer" type="Timer" parent="EnemySpawner"]
wait_time = 10.0

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_aacqb")
volume_db = -3.0

[node name="EndScreenUI" parent="." instance=ExtResource("6_5nbw7")]
visible = false
offset = Vector2(448, 512)
transform = Transform2D(1, 0, 0, 1, 448, 512)

[node name="PowerUpSpawner" type="Node" parent="."]
script = ExtResource("8_6mf1t")

[node name="PowerUpSpawnTimer" type="Timer" parent="PowerUpSpawner"]

[connection signal="timeout" from="EnemySpawner/EnemySpawnTimer" to="EnemySpawner" method="_on_enemy_spawn_timer_timeout"]
[connection signal="timeout" from="PowerUpSpawner/PowerUpSpawnTimer" to="PowerUpSpawner" method="_on_power_up_spawn_timer_timeout"]
